# git-context

./: Cargo.toml  README.md
docs/: dependencies.md
src/: commands.rs  config.rs  main.rs  ops.rs
