[package]
name = "git-context"
version = "0.2.0"
edition = "2024"
authors = ["Angelo Di Bella <angelo.dibella2020@gmail.com>"]
description = "A Git extension for managing multiple repositories and developer personas within a single working directory."
license = "MIT"
repository = "https://github.com/angelodibella/git-context"
readme = "README.md"
keywords = ["git", "cli", "dotfiles", "workspace"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
anyhow = "1.0.86"
